--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cglm"]
 	path = src/cglm
 	url = https://github.com/recp/cglm
+[submodule "stb"]
+	path = src/stb
+	url = https://github.com/nothings/stb
