--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
-src/glad/* linguist-generated
+include/assimp/** linguist-generated
+include/cglm/** linguist-generated
+include/glad/** linguist-generated
+include/stb/** linguist-generated
