Refactored CMakeLists.txt to better suit the preferred style

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,16 @@
 cmake_minimum_required(VERSION 3.12)
-file(GLOB SRC_FILES src/*)
+set(SRC_FILES
+    src/main.c
+    src/glad.c
+    src/window.c
+    src/input.c
+    src/mesh.c
+    src/model.c
+    src/shader.c
+    src/texture.c
+    src/stb_image.c
+    src/camera.c
+)
 
 if(CMAKE_BUILD_TYPE EQUAL DEBUG)
     set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -11,9 +22,9 @@ add_executable(game ${SRC_FILES})
 target_include_directories(game PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_directories(game PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
-target_link_libraries(game "m")
-target_link_libraries(game "GL")
-target_link_libraries(game "glfw")
+target_link_libraries(game m)
+target_link_libraries(game GL)
+target_link_libraries(game glfw)
 find_library(cglm "libcglm.a")
 target_link_libraries(game cglm)
 target_link_libraries(game "assimp")
