Added basic material with tint

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SRC_FILES
     src/mesh.c
     src/model.c
     src/shader.c
+    src/material.c
     src/texture.c
     src/stb_image.c
     src/camera.c
