--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,5 @@ add_executable(game ${SRC_FILES})
 target_include_directories(game PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_directories(game PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
-target_link_libraries(game m)
-target_link_libraries(game GL)
-target_link_libraries(game glfw)
 find_library(cglm "libcglm.a")
-target_link_libraries(game cglm)
-target_link_libraries(game "assimp")
+target_link_libraries(game m GL glfw cglm assimp)
