Removed assimp dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,5 @@ target_include_directories(game PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_directories(game PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/lib")
 
 find_library(cglm "libcglm.a")
+find_library(assimp "libassimp.so")
 target_link_libraries(game m GL glfw cglm assimp)
