--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SRC_FILES
     src/input.c
     src/mesh.c
     src/model.c
+    src/model_presets.c
     src/node.c
     src/shader.c
     src/material.c
