Isolated engine components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,28 +4,26 @@ set(BUILD_DEBUG ON)
 set(ENABLE_ERRORCHECKING ON)
 
 set(SRC_FILES
-    src/glad.c
-    src/rendering.c
-    src/window.c
-    src/input.c
-    src/mesh.c
-    src/shader.c
-    src/stb_image.c
-    src/texture.c
-    src/cubemap.c
-    src/skybox.c
-    src/model.c
-    src/animation.c
-    src/node.c
-    src/camera.c
-    src/material.c
-    src/main.c
-    src/armature.c
-    src/entity.c
-    src/framebuffer.c
-    src/light.c
-    src/error.c
-)
+    src/v10/glad.c
+    src/v10/rendering.c
+    src/v10/window.c
+    src/v10/input.c
+    src/v10/mesh.c
+    src/v10/shader.c
+    src/v10/stb_image.c
+    src/v10/texture.c
+    src/v10/cubemap.c
+    src/v10/skybox.c
+    src/v10/model.c
+    src/v10/animation.c
+    src/v10/node.c
+    src/v10/camera.c
+    src/v10/material.c
+    src/v10/armature.c
+    src/v10/entity.c
+    src/v10/framebuffer.c
+    src/v10/light.c
+    src/v10/error.c)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 if(BUILD_DEBUG)
