--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *v10*
 !*v10/
 .cache
+build/
 
 ### C ###
 # Prerequisites
@@ -55,23 +56,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-
-### CMake ###
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
-
-### CMake Patch ###
-# External projects
-*-prefix/
 
 ### direnv ###
 .direnv
